feat(java-agent): phase 5b.1 — Java→ioctl bridge spike
First Java code lands. A real JVM now reaches the kernel-side java_tls
kprobe through a JNI shim, and bytes flow into the same events.Adapter
that libssl and gotls write to. The Java-side analogue of 5a's
test/java-tls-harness/harness.c.

Phase 5b was scoped as ~2-3 weeks of work bundling three risks (JNI
tooling, ByteBuddy instrumentation, JDK build packaging). Following the
same pattern that made 5a low-risk, this session splits 5b into:

  5b.1 — Java→ioctl bridge spike            (this commit)
  5b.2 — ByteBuddy + SSLEngineInst          (next session)
  5b.3 — hardening + 5b exit criteria       (after 5b.2)

5b.1's job is to prove the JNI / off-heap / native-lib pieces in
isolation, so 5b.2 can focus purely on ByteBuddy advice.

What's new
----------
* build-scripts/Dockerfile.dev — adds openjdk-17-jdk-headless + Gradle
  8.7 + JAVA_HOME=/usr/lib/jvm/default-java (materialised per-arch). No
  impact on the existing libssl / Go toolchain.

* java-agent/ — new top-level Gradle project (Kotlin DSL).
  * src/main/c/postman_jni.c + Makefile — single JNI native method
    wrapping ioctl(2). Returns 64-bit packed (high32=errno, low32=rc)
    so the spike prints useful diagnostics without a second JNI hop.
    Cross-arch via JAVA_HOME/include/{linux,}/.
  * src/main/java/.../ebpf/NativeMemory.java — System.loadLibrary glue +
    off-heap allocator via sun.misc.Unsafe. Works JDK 8-21 with no
    preview flags / --add-opens. MemorySegment fast-path deferred to
    5c if JMH justifies it.
  * src/main/java/.../ebpf/IoctlPacket.java — builds the 41-byte packed
    header off-heap and calls NativeMemory.doIoctl. Same layout as the
    BPF program and harness.c (and OBI's IOCTLPacket.java).
  * src/main/java/.../Main.java — spike CLI: pair / send / recv /
    wrong-cmd / bad-op / burst N. Java-side analogue of harness.c.

Validation (pia-bpf-dev, arm64 Linux, JDK 17.0.19)
--------------------------------------------------